[package]
name = "rust_wasmn_client"
version = "0.1.0"
edition = "2021"
author = "Jackie T. Santana"
repository = "https://github.com/jackie1santana/flight_schedules"
description = "Flight Schedules"
license = "GPL v3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"

[lib]
crate-type = ["rlib", "cdylib"]
